--- a/index.css
+++ b/index.css
@@ -29,11 +29,22 @@ body {
 .questions__container {
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    align-items: center;
+    height: 50vh;
+    width: 50vh;
     max-height: 300px;
+    min-height: 150px;
+    max-width: 300px;
+    min-width: 150px;
+    
+    margin-bottom: 15px;
 
-    background-color: purple;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: purple;
+
+    background-color: black;
 }
 
 .questions__text {
@@ -68,10 +79,18 @@ body {
     visibility: hidden;
 
     width: 100%;
+    height: 100%;
+    max-height: 300px;
+    min-height: 150px;
     max-width: 300px;
-    height: 100vh;
+    min-width: 150px;
 
-    background-color: blueviolet;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: purple;
+
+    background-color: black;
 }
 
 #countdown-text {
