--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
     padding: 0;
     margin: 0;
 
-    background-color: rgb(144, 142, 142);
+    background-color: var(--main-bg);
 }
 
 .page-container {
